--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Navigation-Shapely</title>
 </head>
 
-<img src="https://cdn.pixabay.com/photo/2017/02/05/00/19/web-design-2038872__340.jpg"
-    alt="Ansicht Buch, Notebook und Notizblock">
 
 <body>
+    <img src="https://cdn.pixabay.com/photo/2017/02/05/00/19/web-design-2038872__340.jpg"
+        alt="Ansicht Buch, Notebook und Notizblock">
     <ul>
         <li><a href="#">HOME</a></li>
         <li><a href="#">BLOG</a></li>
@@ -40,6 +40,8 @@
             <li><a href="#">Page A</li>
             <li><a href="#">Page B</a></li>
         </ul>
+<p></p>
+        2023_rebuild_michaelsuperCode_revised_&#9825;_version
 </body>
 
 </html>
