--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation-Shapely</title>
+    <link rel="stylesheet" href="style.css">
+    <title>sC_Navigation-Shapely</title>
 </head>
 
 
