--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <img src="https://cdn.pixabay.com/photo/2017/02/05/00/19/web-design-2038872__340.jpg"
         alt="Ansicht Buch, Notebook und Notizblock">
+        <div class="basic">
     <ul>
         <li><a href="#">HOME</a></li>
         <li><a href="#">BLOG</a></li>
@@ -42,7 +43,7 @@
             <li><a href="#">Page A</li>
             <li><a href="#">Page B</a></li>
         </ul>
-<p></p>
+        </div>
         2023_rebuild_michaelsuperCode_revised_&#9825;_version
 </body>
 
