--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <h2>Navigation_Shapely</h2>
+    <h2>sC_Navigation_Shapely</h2>
     <img src="https://cdn.pixabay.com/photo/2017/02/05/00/19/web-design-2038872__340.jpg"
         alt="Ansicht Buch, Notebook und Notizblock">
         <div class="basic">
